# CppMandelbrotSDL2

./: CMakeLists.txt  README.md  b  main.cpp  r
